envoy/envoyconf.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 2001 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  host_rewrite: envoy-app1
                  cluster: prod
                  request_mirror_policy:
                    cluster: mirrored
                    runtime_fraction: { default_value: { numerator: 100 } }
          http_filters:
          - name: envoy.router
  clusters:
  - name: prod
    type: LOGICAL_DNS
    connect_timeout: 5s
    hosts: [{ socket_address: { address: envoy-app1, port_value: 5000 }}]
  - name: mirrored
    type: LOGICAL_DNS
    connect_timeout: 15s
    hosts: [{ socket_address: { address: envoy-app2, port_value: 5003 }}]
